# stored-dx-bot

./: .gitignore  .replit  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml  replit.md  replit.nix
attached_assets/: Pasted-Build-a-production-grade-Python-system-for-my-OWN-websi_1774558721997.txt
bot_system/: .env.example  README.md  debug_navigation.py  requirements.txt
bot_system/app/: main.py
bot_system/app/bot/: commands.py  handlers.py  telegram_client.py
bot_system/app/core/: config.py  enums.py  fingerprint.py  identity_engine.py  logger.py  secure_logger.py  throttler.py  utils.py
bot_system/app/gmail/: gmail_client.py  gmail_pool.py  matcher.py  otp_watcher.py  otp_webhook.py  parser.py
bot_system/app/jobs/: job_manager.py  scheduler.py
bot_system/app/media/: __init__.py  downloader.py  handlers.py  rate_limiter.py  url_parser.py
bot_system/app/services/: notification_service.py  otp_service.py  payment_service.py  registration_service.py
bot_system/app/site/: __init__.py  api_client.py  base.py  bin_intelligence.py  (+12 more)
bot_system/data/: jobs.db  jobs.db-shm  jobs.db-wal
bot_system/debug/: after_signup_click_page_source.html  auth_direct_page_source.html  error_page_source.html  homepage_page_source.html
bot_system/tests/: test_api_client.py  test_job_manager.py  test_matcher.py  test_parser.py
media_bot/: .env.example  Dockerfile  Procfile  README.md  bot.py  requirements.txt
media_bot/mdbot/: __init__.py  admin.py  config.py  downloader.py  handlers.py  logging_setup.py  platforms.py  rate_limit.py  storage.py  utils.py
(+4 files in other folders)
