[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "playwright==1.58.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.1.0",
    "python-telegram-bot==21.7",
    "yt-dlp==2024.11.18",
    "requests==2.32.3",
    "urllib3==2.2.3",
]
